--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,21 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.0|^8.0.2",
+        "ext-curl": "*",
+        "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.2",
         "irazasyed/telegram-bot-sdk": "^3.6",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "westacks/telebot": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
