--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,26 @@
-APP_NAME=Laravel
+APP_NAME="Bot with Webhook"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4L2H0vJHctFbJQ8ll3cvdLk5Ym+iUldizVssin48ThI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://bot_with_webhook.test
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
+TELEGRAM_BOT_TOKEN="BOT_TOKEN_HERE"
+TELEGRAM_WEBHOOK_URL=https://APP_URL/UNIQUE_STRING/webhook
+TELEGRAM_BGI_BETEGNA_PHOTO_FILE_ID="TELEGRAM_IMAGE_FILE_ID"
+
+LOG_CHANNEL=telegram
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bot_with_webhook
+DB_DATABASE=bgi_it_bot
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -34,7 +37,7 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -50,3 +53,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OZEKING_USERNAME = 'OZIKI_USERNAME'
+OZEKING_PASSWORD = 'OZIKI_PASSWORD'
+
+eLEADER_DB_CONNECTION=mssql
+eLEADER_DB_HOST=ELEADER_DB_HOST_URL
+eLEADER_DB_PORT=1433
+eLEADER_DB_DATABASE=DB_NAME
+eLEADER_DB_USERNAME=DB_USER_NAME
+eLEADER_DB_PASSWORD='DB_PASSWORD'
